feat(mops): move chat control flow to application layer